--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -20,7 +20,13 @@
 
 ## 数据处理
 
+#### 通过替换数据类型、用category类代替object类的方法来减小内存占用
 
+##### 从int8 -> int64占用内存逐渐增大，float16 -> float64同理。预处理数据考察DataFrame中的每一列的最大值与最小值，然后为每一列分配最合适的数据类型，可以大大减少占用的内存。
+
+#### 将**heartbeat_signals**列分割成小的特征
+
+#### 观察到**id**列无缺省值无异常值，可以去掉，用DataFrame的默认索引代替id值
 
 ## 方法选用
 
