--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -26,7 +26,15 @@
 
 #### 将**heartbeat_signals**列分割成小的特征
 
-#### 观察到**id**列无缺省值无异常值，可以去掉，用DataFrame的默认索引代替id值
+##### 处理前
+
+![原数据](D:\大二下\机器学习\machine-learning\project\原数据.jpg)
+
+##### 处理后
+
+![处理后数据](D:\大二下\机器学习\machine-learning\project\处理后数据.jpg)
+
+#### 观察到**id**列无缺省值无异常值，所以在模型拟合时可以去掉，直接用DataFrame的默认索引代替id值
 
 ## 方法选用
 
@@ -39,11 +47,11 @@
 
 ##### 随机森林算法准确度高，优势明显，用在此题上也没能完全发挥它所有的优势，如平衡类群不平衡数据集中的错误、提供有关变量和分类之间关系、检测可变相互作用等
 
-
-
 ## 名词解释
 
-#### **泛化误差**是用来衡量一个学习机器推广未知数据的能力，即根据从样本数据中学习到的规则能够应用到新数据的能力
+#### **泛化误差**
+
+##### 用来衡量一个学习机器推广未知数据的能力，即根据从样本数据中学习到的规则能够应用到新数据的能力
 
 ## 参考
 
