--- a/project/心跳信号分类预测.ipynb
+++ b/project/心跳信号分类预测.ipynb
@@ -290,19 +290,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'train' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-8-39725f707120>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 去掉id和label，用于模型拟合\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0my_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mx_test\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'id'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'train' is not defined"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "             t0        t1        t2        t3        t4        t5        t6  \\\n",
+       "0      0.991211  0.943359  0.764648  0.618652  0.379639  0.190796  0.040222   \n",
+       "1      0.971680  0.929199  0.572754  0.178467  0.122986  0.132324  0.094421   \n",
+       "2      1.000000  0.958984  0.701172  0.231812  0.000000  0.080688  0.128418   \n",
+       "3      0.975586  0.934082  0.659668  0.249878  0.237061  0.281494  0.249878   \n",
+       "4      0.000000  0.055817  0.261230  0.359863  0.433105  0.453613  0.499023   \n",
+       "...         ...       ...       ...       ...       ...       ...       ...   \n",
+       "99995  1.000000  0.677734  0.222412  0.257080  0.204712  0.054657  0.026154   \n",
+       "99996  0.926758  0.906250  0.637207  0.415039  0.374756  0.382568  0.358887   \n",
+       "99997  0.925781  0.587402  0.633301  0.632324  0.639160  0.614258  0.599121   \n",
+       "99998  1.000000  0.994629  0.829590  0.458252  0.264160  0.240234  0.213745   \n",
+       "99999  0.925781  0.916504  0.404297  0.000000  0.262939  0.385498  0.361084   \n",
+       "\n",
+       "             t7        t8        t9  ...  t195  t196  t197  t198  t199  t200  \\\n",
+       "0      0.026001  0.031708  0.065552  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "1      0.089600  0.030487  0.040497  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "2      0.187500  0.280762  0.328369  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "3      0.249878  0.241455  0.230713  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "4      0.542969  0.616699  0.676758  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "...         ...       ...       ...  ...   ...   ...   ...   ...   ...   ...   \n",
+       "99995  0.118164  0.244873  0.328857  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "99996  0.341309  0.336426  0.317139  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "99997  0.517578  0.403809  0.253174  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "99998  0.189331  0.203857  0.210815  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "99999  0.332764  0.339844  0.350586  ...   0.0   0.0   0.0   0.0   0.0   0.0   \n",
+       "\n",
+       "       t201  t202  t203  t204  \n",
+       "0       0.0   0.0   0.0   0.0  \n",
+       "1       0.0   0.0   0.0   0.0  \n",
+       "2       0.0   0.0   0.0   0.0  \n",
+       "3       0.0   0.0   0.0   0.0  \n",
+       "4       0.0   0.0   0.0   0.0  \n",
+       "...     ...   ...   ...   ...  \n",
+       "99995   0.0   0.0   0.0   0.0  \n",
+       "99996   0.0   0.0   0.0   0.0  \n",
+       "99997   0.0   0.0   0.0   0.0  \n",
+       "99998   0.0   0.0   0.0   0.0  \n",
+       "99999   0.0   0.0   0.0   0.0  \n",
+       "\n",
+       "[100000 rows x 205 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t0</th>\n      <th>t1</th>\n      <th>t2</th>\n      <th>t3</th>\n      <th>t4</th>\n      <th>t5</th>\n      <th>t6</th>\n      <th>t7</th>\n      <th>t8</th>\n      <th>t9</th>\n      <th>...</th>\n      <th>t195</th>\n      <th>t196</th>\n      <th>t197</th>\n      <th>t198</th>\n      <th>t199</th>\n      <th>t200</th>\n      <th>t201</th>\n      <th>t202</th>\n      <th>t203</th>\n      <th>t204</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.991211</td>\n      <td>0.943359</td>\n      <td>0.764648</td>\n      <td>0.618652</td>\n      <td>0.379639</td>\n      <td>0.190796</td>\n      <td>0.040222</td>\n      <td>0.026001</td>\n      <td>0.031708</td>\n      <td>0.065552</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.971680</td>\n      <td>0.929199</td>\n      <td>0.572754</td>\n      <td>0.178467</td>\n      <td>0.122986</td>\n      <td>0.132324</td>\n      <td>0.094421</td>\n      <td>0.089600</td>\n      <td>0.030487</td>\n      <td>0.040497</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1.000000</td>\n      <td>0.958984</td>\n      <td>0.701172</td>\n      <td>0.231812</td>\n      <td>0.000000</td>\n      <td>0.080688</td>\n      <td>0.128418</td>\n      <td>0.187500</td>\n      <td>0.280762</td>\n      <td>0.328369</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.975586</td>\n      <td>0.934082</td>\n      <td>0.659668</td>\n      <td>0.249878</td>\n      <td>0.237061</td>\n      <td>0.281494</td>\n      <td>0.249878</td>\n      <td>0.249878</td>\n      <td>0.241455</td>\n      <td>0.230713</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.000000</td>\n      <td>0.055817</td>\n      <td>0.261230</td>\n      <td>0.359863</td>\n      <td>0.433105</td>\n      <td>0.453613</td>\n      <td>0.499023</td>\n      <td>0.542969</td>\n      <td>0.616699</td>\n      <td>0.676758</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>99995</th>\n      <td>1.000000</td>\n      <td>0.677734</td>\n      <td>0.222412</td>\n      <td>0.257080</td>\n      <td>0.204712</td>\n      <td>0.054657</td>\n      <td>0.026154</td>\n      <td>0.118164</td>\n      <td>0.244873</td>\n      <td>0.328857</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99996</th>\n      <td>0.926758</td>\n      <td>0.906250</td>\n      <td>0.637207</td>\n      <td>0.415039</td>\n      <td>0.374756</td>\n      <td>0.382568</td>\n      <td>0.358887</td>\n      <td>0.341309</td>\n      <td>0.336426</td>\n      <td>0.317139</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99997</th>\n      <td>0.925781</td>\n      <td>0.587402</td>\n      <td>0.633301</td>\n      <td>0.632324</td>\n      <td>0.639160</td>\n      <td>0.614258</td>\n      <td>0.599121</td>\n      <td>0.517578</td>\n      <td>0.403809</td>\n      <td>0.253174</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99998</th>\n      <td>1.000000</td>\n      <td>0.994629</td>\n      <td>0.829590</td>\n      <td>0.458252</td>\n      <td>0.264160</td>\n      <td>0.240234</td>\n      <td>0.213745</td>\n      <td>0.189331</td>\n      <td>0.203857</td>\n      <td>0.210815</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>99999</th>\n      <td>0.925781</td>\n      <td>0.916504</td>\n      <td>0.404297</td>\n      <td>0.000000</td>\n      <td>0.262939</td>\n      <td>0.385498</td>\n      <td>0.361084</td>\n      <td>0.332764</td>\n      <td>0.339844</td>\n      <td>0.350586</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n<p>100000 rows × 205 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 9
     }
    ],
    "source": [
