--- a/project/心跳信号分类预测.ipynb
+++ b/project/心跳信号分类预测.ipynb
@@ -36,6 +36,7 @@
    "outputs": [],
    "source": [
     "# 包含所需要的库\n",
+    "# 关于如何直接导出ipynb为pdf且支持中文的参考https://www.cnblogs.com/myfy/p/12829122.html\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
