--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -56,8 +56,18 @@
 ## 参考
 
 1. [随机森林 - Random Forest](https://zhuanlan.zhihu.com/p/44695084)
+
 2. [泛化误差和经验误差](https://blog.csdn.net/seasongirl/article/details/80889488)
+
 3. [心跳信号分类预测_Task 2 天池技术讨论区](https://tianchi.aliyun.com/forum/postDetail?spm=5176.12586969.1002.36.3cf245515sJeOB&postId=195918)
+
 4. [决策树VS随机森林](https://www.jiqizhixin.com/articles/2020-06-11-6)
+
 5. [决策树与随机森林之间的关系](https://blog.csdn.net/qq_39777550/article/details/107312048)
+
+6. [利用AdaBoost元算法提高分类性能](https://blog.csdn.net/baidu_31657889/article/details/93891552?utm_source=app&app_version=4.7.1)
+
+7. [使用Adaboost进行分类性能提升](https://blog.csdn.net/weixin_41677876/article/details/106154591?utm_source=app&app_version=4.7.1)
+
+   
 
