--- a/project/slides/slides.tex
+++ b/project/slides/slides.tex
@@ -71,7 +71,7 @@
 \definecolor{zdyred}{RGB}{184,0,0} %千万不能写rgb
 
 % 设置用acrobat打开就会全屏显示
-\hypersetup{pdfpagemode=FullScreen}
+% \hypersetup{pdfpagemode=FullScreen}
 
 %-------------开始-------------------
 \begin{document}
@@ -165,7 +165,7 @@
     内容
 \end{frame}
 
-\section{参考}
+\section{写在最后}
 \begin{frame}
     \frametitle{参考内容}
     \begin{enumerate}
@@ -175,7 +175,6 @@
     \end{enumerate}
 \end{frame}
 
-\section{}
 \begin{frame}
 	\zihao{-4}\centering{Thank you!}
 \end{frame}
