--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -36,7 +36,30 @@
 
 #### 观察到**id**列无缺省值无异常值，所以在模型拟合时可以去掉，直接用DataFrame的默认索引代替id值
 
+#### 可视化
+
+![label图](D:\大二下\机器学习\machine-learning\project\label图.png)
+
+
+
 ## 方法选用
+
+### AdaBoost + 决策树
+
+1. 最常见的AdaBoost元分类器是决策树，sklearn中默认使用一层的决策树来作为它的元分类器
+2. 尝试以不同层数的决策树作为元分类器，精确度先增加后减少
+
+![adaboost1](D:\大二下\机器学习\machine-learning\project\adaboost1.jpg)
+
+### AdaBoost + SVM
+
+尝试在一个分类问题中找到一个较优的元分类器
+
+2000条数据跑了43分钟才出结果，实际效果和一层决策树的AdaBoost一致，并不是很优
+
+![adaboost2](D:\大二下\机器学习\machine-learning\project\adaboost2.jpg)
+
+对比之下，还是决策树更适合与AdaBoost搭配
 
 ### 随机森林 Random Forest
 
@@ -45,7 +68,9 @@
 3. 可以保存生成的林以备将来用于其他数据
 4. 随着森林建设的进展，它会产生对**泛化误差**的内部无偏估计
 
-##### 随机森林算法准确度高，优势明显，用在此题上也没能完全发挥它所有的优势，如平衡类群不平衡数据集中的错误、提供有关变量和分类之间关系、检测可变相互作用等
+### 择优选择
+
+
 
 ## 名词解释
 
@@ -68,6 +93,8 @@
 6. [利用AdaBoost元算法提高分类性能](https://blog.csdn.net/baidu_31657889/article/details/93891552?utm_source=app&app_version=4.7.1)
 
 7. [使用Adaboost进行分类性能提升](https://blog.csdn.net/weixin_41677876/article/details/106154591?utm_source=app&app_version=4.7.1)
+
+8. [各种机器学习算法的应用场景](https://www.zhihu.com/question/26726794/answer/151282052)
 
    
 
