--- a/project/心跳信号分类预测.ipynb
+++ b/project/心跳信号分类预测.ipynb
@@ -512,6 +512,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.645, 0.645,\n",
+       "       0.645, 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.645,\n",
+       "       0.645, 0.645, 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 ,\n",
+       "       0.645, 0.645, 0.645])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "# 保存一下n_scores的值...不用下次再跑四十多分钟了\n",
+    "n_scores_copy=np.array([0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.645, 0.645, 0.645, 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.645, 0.645, 0.645, 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 , 0.65 ,0.645, 0.645, 0.645])\n",
+    "n_scores_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
