--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -13,8 +13,8 @@
 #### 特征是一串心跳序列
 
 - 实际是多个特征伪装成的一个特征
-- 无匿名特征（与贷款违约预测相比）
-- 数据关联性较大，主要是时序上的关联
+- 无匿名特征（与贷款违约预测相比），无缺省值
+- 特征之间关联性较大，主要是时序上的关联
 
 #### 结果提交的是4种不同心跳信号预测的概率，而非单一的预测所属分类
 
@@ -63,14 +63,23 @@
 
 ### 随机森林 Random Forest
 
-1. 可以处理数千个输入变量而无需变量删除
-2. 有一种估算缺失数据的有效方法，并在大部分数据丢失时保持准确性
-3. 可以保存生成的林以备将来用于其他数据
-4. 随着森林建设的进展，它会产生对**泛化误差**的内部无偏估计
+1. **随机森林适用于拥有大型数据集的情况**，可以处理数千个输入变量而无需变量删除
+2. 不需要很多参数调整就可以达到不错的效果
+3. 有一种估算缺失数据的有效方法，并在大部分数据丢失时保持准确性
+4. 可以保存生成的林以备将来用于其他数据
+5. 随着森林建设的进展，它会产生对**泛化误差**的内部无偏估计
 
-### 择优选择
+![randomforest](D:\大二下\机器学习\machine-learning\project\randomforest.jpg)
 
+### 优化手段
 
+#### 可以看出以8层决策树为元分类器的AdaBoost和随机森林的准确率较高，表现较好
+
+#### 最终选择随机森林算法
+
+1.  PCA 会进行降维操作，这可以减少随机森林要处理的特征数量，因此 PCA 可能有助于加快随机森林模型的训练速度。计算成本高是随机森林的最大缺点之一，如果只想简单地拥有最佳性能的模型，并且可以牺牲解释特征的重要性，那么 PCA 可能会很有用，但这并不是必须的，如果能
+2. 以SVM为元分类器的AdaBoost算法准确率不高的原因可能是在创建元分类器时没有对特征进行标准化处理，应用SVM需要进行标准化，但树形结构不用
+3. 后续对模型进行超参数调优，进一步提高分类准确率
 
 ## 名词解释
 
