--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -78,8 +78,18 @@
 #### 最终选择随机森林算法
 
 1.  PCA 会进行降维操作，这可以减少随机森林要处理的特征数量，因此 PCA 可能有助于加快随机森林模型的训练速度。计算成本高是随机森林的最大缺点之一，如果只想简单地拥有最佳性能的模型，并且可以牺牲解释特征的重要性，那么 PCA 可能会很有用，但这并不是必须的，如果能
-2. 以SVM为元分类器的AdaBoost算法准确率不高的原因可能是在创建元分类器时没有对特征进行标准化处理，应用SVM需要进行标准化，但树形结构不用
-3. 后续对模型进行超参数调优，进一步提高分类准确率
+2.  以SVM为元分类器的AdaBoost算法准确率不高的原因可能是在创建元分类器时没有对特征进行标准化处理，应用SVM需要进行标准化，但树形结构不用
+3.  后续对模型进行超参数调优，进一步提高分类准确率
+
+#### 参数调优
+
+1. 参数n_estimators对性能的影响最大，所以要使该参数对模型在未知数据上的评估性能的影响幅度最小
+2. max_depth次之，最大深度也代表了最高复杂度
+3. min_samples_leaf和min_samples_split并列
+4. max_features对模型的影响较小
+5. criterion一般使用gini，具体需要视情况而定
+
+##### 模型太复杂或者太简单，都会让泛化误差高，我们追求的是位于中间的平衡点
 
 ## 名词解释
 
