--- a/project/赛题分析.md
+++ b/project/赛题分析.md
@@ -91,6 +91,8 @@
 
 ##### 模型太复杂或者太简单，都会让泛化误差高，我们追求的是位于中间的平衡点
 
+##### max_depth，min_samples_leaf和min_samples_split是剪枝参数，是减小复杂度的参数
+
 ## 名词解释
 
 #### **泛化误差**
